	PR c++/11105 	* cp-tree.h (DECL_CONV_FN_TYPE): New method. 	* mangle.c (struct globals): Remove internal_mangling_p. 	(write_unqualified_name): Use DECL_CONV_FN_TYPE. 	(write_template_parm): Don't write out the level number. 	(conv_type_names): New variable. 	(hash_type): New function. 	(compare_type): Likewise. 	(mangle_conv_op_name_for_type): Don't try to mangle conversion 	operator names. 	* search.c (lookup_conversion_operator): New function. 	(lookup_fnfields_1): Use it.

PR c++/11105
	* g++.dg/abi/conv1.C: Remove it.
	* g++.dg/template/conv7.C: New test.
	* g++.dg/template/conv8.C: Likewise.
	* g++.old-deja/g++.ext/pretty2.C: Do not test __FUNCTION__ for a
	conversion operator.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@68095 138bc75d-0d04-0410-961f-82ee72b054a4