gcc/testsuite/g++.dg/template/conv8.C
@@ -1,0 +1,12 @@
+// { dg-options "-fabi-version=1" }
+
+template <typename T> struct S {
+    struct I{};
+    operator I* ();
+};
+
+template <typename T> struct S2 : S<T> {
+    operator typename S<T>::I* ();
+};
+
+template struct S2<int>;
